Introduce isVirtualThread check (disabled by default)